Fixed drawing on mobile devices in Interative Table module

--- a/addons/Interactive_Table/src/style.css
+++ b/addons/Interactive_Table/src/style.css
@@ -29,11 +29,11 @@
     background-color: #7A7A7A;
 }
 
-.interactive-table-panel .button.clicked-lighter, .interactive-table-panel .button-drawing-details.clicked-lighter {
+.interactive-table-panel .button.clicked-lighter, .interactive-table-panel .button-drawing-details.clicked-lighter, .interactive-table-panel .button-floating-image.clicked-lighter {
     background-color: #CACACA;
 }
 
-.interactive-table-panel .button, .interactive-table-panel .button-drawing-details {
+.interactive-table-panel .button, .interactive-table-panel .button-drawing-details, .interactive-table-panel .button-floating-image {
     width: 30px;
     height: 30px;
     float: left;
@@ -66,6 +66,11 @@
 
 .interactive-table-mask.pen-mask, .interactive-table-mask.marker-mask {
     background-color: rgba(255, 255, 255, 0.2);
+}
+
+.interactive-table-mask.floating-image-mask {
+    background-color: rgba(200, 200, 200, 0.1);
+    cursor: default;
 }
 
 .interactive-table-mask.pen-mask {
@@ -176,6 +181,14 @@
     background-image: url('resources/wb_panel_note_icon-active.svg');
 }
 
+.interactive-table-panel .button.floating-image {
+    background-image: url('resources/it_floating_image_icon.svg');
+}
+
+.interactive-table-panel .button.floating-image.clicked {
+    background: #979797 url('resources/it_floating_image_icon-active.svg');
+}
+
 .interactive-table-panel .button.color {
     background-image: url('resources/wb_panel_color_black_icon.svg');
 }
@@ -252,6 +265,18 @@
     background-image: url('resources/wb_panel_size4_icon-active.svg');
 }
 
+.button-floating-image.button-floating-image-1 {
+    background-image: url('resources/it_ruler_icon.png');
+}
+
+.button-floating-image.button-floating-image-2 {
+    background-image: url('resources/it_setsquare_icon.png');
+}
+
+.button-floating-image.button-floating-image-3 {
+    background-image: url('resources/it_protractor_icon.png');
+}
+
 .interactive-table-note {
     top: 0px;
     width: 180px;
@@ -310,4 +335,8 @@
 
 .interactive-table-note .note-close.hovered {
     color: #696969;
+}
+
+.interactive-table-floating-image {
+    display: none;
 }
